# serializer version: 1
# name: test_service[end0-start0-incl_vat0-get_energy_prices]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[end0-start0-incl_vat0-get_gas_prices]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[end0-start0-incl_vat1-get_energy_prices]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[end0-start0-incl_vat1-get_gas_prices]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[end0-start1-incl_vat0-get_energy_prices]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[end0-start1-incl_vat0-get_gas_prices]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[end0-start1-incl_vat1-get_energy_prices]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[end0-start1-incl_vat1-get_gas_prices]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[end1-start0-incl_vat0-get_energy_prices]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[end1-start0-incl_vat0-get_gas_prices]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[end1-start0-incl_vat1-get_energy_prices]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[end1-start0-incl_vat1-get_gas_prices]
  dict({
    'prices': list([
    ]),
  })
# ---
# name: test_service[end1-start1-incl_vat0-get_energy_prices]
  dict({
    'prices': list([
      dict({
        'price': 0.1308775,
        'timestamp': '2026-04-10 07:00:00+00:00',
      }),
      dict({
        'price': 0.125615,
        'timestamp': '2026-04-10 08:00:00+00:00',
      }),
      dict({
        'price': 0.1072,
        'timestamp': '2026-04-10 09:00:00+00:00',
      }),
      dict({
        'price': 0.103655,
        'timestamp': '2026-04-10 10:00:00+00:00',
      }),
      dict({
        'price': 0.09139,
        'timestamp': '2026-04-10 11:00:00+00:00',
      }),
      dict({
        'price': 0.095425,
        'timestamp': '2026-04-10 12:00:00+00:00',
      }),
      dict({
        'price': 0.084555,
        'timestamp': '2026-04-10 13:00:00+00:00',
      }),
      dict({
        'price': 0.1012625,
        'timestamp': '2026-04-10 14:00:00+00:00',
      }),
      dict({
        'price': 0.1207175,
        'timestamp': '2026-04-10 15:00:00+00:00',
      }),
      dict({
        'price': 0.1504,
        'timestamp': '2026-04-10 16:00:00+00:00',
      }),
      dict({
        'price': 0.2250025,
        'timestamp': '2026-04-10 17:00:00+00:00',
      }),
      dict({
        'price': 0.2381425,
        'timestamp': '2026-04-10 18:00:00+00:00',
      }),
      dict({
        'price': 0.17063,
        'timestamp': '2026-04-10 19:00:00+00:00',
      }),
      dict({
        'price': 0.142075,
        'timestamp': '2026-04-10 20:00:00+00:00',
      }),
      dict({
        'price': 0.12572,
        'timestamp': '2026-04-10 21:00:00+00:00',
      }),
      dict({
        'price': 0.125925,
        'timestamp': '2026-04-10 22:00:00+00:00',
      }),
      dict({
        'price': 0.1120525,
        'timestamp': '2026-04-10 23:00:00+00:00',
      }),
      dict({
        'price': 0.104565,
        'timestamp': '2026-04-11 00:00:00+00:00',
      }),
      dict({
        'price': 0.1010475,
        'timestamp': '2026-04-11 01:00:00+00:00',
      }),
      dict({
        'price': 0.0997025,
        'timestamp': '2026-04-11 02:00:00+00:00',
      }),
      dict({
        'price': 0.0968925,
        'timestamp': '2026-04-11 03:00:00+00:00',
      }),
      dict({
        'price': 0.0963775,
        'timestamp': '2026-04-11 04:00:00+00:00',
      }),
      dict({
        'price': 0.084415,
        'timestamp': '2026-04-11 05:00:00+00:00',
      }),
      dict({
        'price': 0.0640525,
        'timestamp': '2026-04-11 06:00:00+00:00',
      }),
    ]),
  })
# ---
# name: test_service[end1-start1-incl_vat0-get_gas_prices]
  dict({
    'prices': list([
      dict({
        'price': 0.430304930424,
        'timestamp': '2026-04-11 04:00:00+00:00',
      }),
    ]),
  })
# ---
# name: test_service[end1-start1-incl_vat1-get_energy_prices]
  dict({
    'prices': list([
      dict({
        'price': 0.158361775,
        'timestamp': '2026-04-10 07:00:00+00:00',
      }),
      dict({
        'price': 0.15199415,
        'timestamp': '2026-04-10 08:00:00+00:00',
      }),
      dict({
        'price': 0.129712,
        'timestamp': '2026-04-10 09:00:00+00:00',
      }),
      dict({
        'price': 0.12542255,
        'timestamp': '2026-04-10 10:00:00+00:00',
      }),
      dict({
        'price': 0.1105819,
        'timestamp': '2026-04-10 11:00:00+00:00',
      }),
      dict({
        'price': 0.11546425,
        'timestamp': '2026-04-10 12:00:00+00:00',
      }),
      dict({
        'price': 0.10231155,
        'timestamp': '2026-04-10 13:00:00+00:00',
      }),
      dict({
        'price': 0.122527625,
        'timestamp': '2026-04-10 14:00:00+00:00',
      }),
      dict({
        'price': 0.146068175,
        'timestamp': '2026-04-10 15:00:00+00:00',
      }),
      dict({
        'price': 0.181984,
        'timestamp': '2026-04-10 16:00:00+00:00',
      }),
      dict({
        'price': 0.272253025,
        'timestamp': '2026-04-10 17:00:00+00:00',
      }),
      dict({
        'price': 0.288152425,
        'timestamp': '2026-04-10 18:00:00+00:00',
      }),
      dict({
        'price': 0.2064623,
        'timestamp': '2026-04-10 19:00:00+00:00',
      }),
      dict({
        'price': 0.17191075,
        'timestamp': '2026-04-10 20:00:00+00:00',
      }),
      dict({
        'price': 0.1521212,
        'timestamp': '2026-04-10 21:00:00+00:00',
      }),
      dict({
        'price': 0.15236925,
        'timestamp': '2026-04-10 22:00:00+00:00',
      }),
      dict({
        'price': 0.135583525,
        'timestamp': '2026-04-10 23:00:00+00:00',
      }),
      dict({
        'price': 0.12652365,
        'timestamp': '2026-04-11 00:00:00+00:00',
      }),
      dict({
        'price': 0.122267475,
        'timestamp': '2026-04-11 01:00:00+00:00',
      }),
      dict({
        'price': 0.120640025,
        'timestamp': '2026-04-11 02:00:00+00:00',
      }),
      dict({
        'price': 0.117239925,
        'timestamp': '2026-04-11 03:00:00+00:00',
      }),
      dict({
        'price': 0.116616775,
        'timestamp': '2026-04-11 04:00:00+00:00',
      }),
      dict({
        'price': 0.10214215,
        'timestamp': '2026-04-11 05:00:00+00:00',
      }),
      dict({
        'price': 0.077503525,
        'timestamp': '2026-04-11 06:00:00+00:00',
      }),
    ]),
  })
# ---
# name: test_service[end1-start1-incl_vat1-get_gas_prices]
  dict({
    'prices': list([
      dict({
        'price': 0.52066896581304,
        'timestamp': '2026-04-11 04:00:00+00:00',
      }),
    ]),
  })
# ---
